--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link
-            rel="icon"
-            href="%PUBLIC_URL%/RBDLogoRounded.png"
-        />
+        <link rel="icon" href="%PUBLIC_URL%/RBDLogo.png" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
@@ -15,28 +12,63 @@
             name="description"
             content="Track your daily highlights, challenges, and opportunities with Rose, Bud, Thorn - a simple way to reflect on each day and watch your journey unfold over time."
         />
+
+        <!-- 
+        PWA icon support for iOS devices
+        iOS doesn't fully respect manifest.json, so we need these specific meta tags 
+        -->
         <link
             rel="apple-touch-icon"
-            href="%PUBLIC_URL%/RBDLogoRounded.png"
+            href="%PUBLIC_URL%/RBDLogo.png"
         />
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
+        <!-- Device-specific iOS icons -->
+        <link
+            rel="apple-touch-icon"
+            sizes="72x72"
+            href="%PUBLIC_URL%/icons/icon72.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="96x96"
+            href="%PUBLIC_URL%/icons/icon96.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="128x128"
+            href="%PUBLIC_URL%/icons/icon128.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="144x144"
+            href="%PUBLIC_URL%/icons/icon144.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="%PUBLIC_URL%/icons/icon152.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="192x192"
+            href="%PUBLIC_URL%/icons/icon192.png"
+        />
+
+        <!-- 
+        Prevents iOS from applying its default icon styling (important for keeping original icon shape) 
+        -->
+        <link
+            rel="apple-touch-icon-precomposed"
+            href="%PUBLIC_URL%/RBDLogo.png"
+        />
+
+        <!-- Web App Manifest - defines how the app appears when installed on a device -->
         <link
             rel="manifest"
             href="%PUBLIC_URL%/manifest.json"
         />
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-        <!-- Add this for iOS PWA capabilities -->
+        <!-- Enable PWA capabilities for iOS devices -->
         <meta
             name="apple-mobile-web-app-capable"
             content="yes"
@@ -45,11 +77,16 @@
             name="apple-mobile-web-app-status-bar-style"
             content="black-translucent"
         />
-        <!-- For Safari PWA splash screens -->
+
+        <!-- 
+        Splash screen for iOS PWA
+        Will be replaced with a single custom splash screen
+        -->
         <link
             rel="apple-touch-startup-image"
-            href="%PUBLIC_URL%/icons/splash.png"
+            href="%PUBLIC_URL%/splash.png"
         />
+
         <title>Rose, Bud, Thorn</title>
     </head>
     <body>
